@@ -1,4 +1,4 @@
-﻿9/*
+/*
  * FCKeditor - The text editor for Internet - http://www.fckeditor.net
  * Copyright (C) 2003-2007 Frederico Caldeira Knabben
  *
@@ -482,17 +482,15 @@ FCKConfig.Geshi_Types = new Array(
 
 
 function get_image_extensions(){
-    var ajx = new sack();
+    var ajx = new sack();    
 	ajx.requestFile =  "../extensions.php";
 	ajx.method = 'POST';
 	ajx.onCompletion = function() {
 	    if(ajx.responseStatus && ajax.responseStatus[0] == 200) {
-		    var image_types = ajx.response;
-			if(image_types.length>6) {
-			    FCKConfig.ImageUploadAllowedExtensions	= '.(' + image_types+ ')$' ;		
-			}
-			
-		}
+		    var image_types = ajx.response;		
+		    if(image_types)
+		        FCKConfig.ImageUploadAllowedExtensions	= '.(' + image_types+ ')$' ;		
+		} 
 	};
 	ajx.runAJAX();
 }
